null issue and refresh tokens refactoring
